2009-10-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Pass the current request object to user creation methods.

2009-10-13  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/data.py:
	* lib/pytis/form/configui.py:
	Add `arguments' argument to all `select' methods.

2009-10-13  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Add dummy `arguments' method to BindingSpec.

2009-10-09  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix lock id in pytis_update_summary_rights.

2009-10-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Amend: yes.
	Don't try to reselect SideBrowseForm row after main form row selection
	
	

2009-10-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Don't try to reselect SideBrowseForm row after main form row selection.

2009-10-09  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	* lib/pytis/form/list.py:
	Fix default value of ApplicationPreviewRights/menuid.

2009-10-08  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	* doc/tutorials/dmp:
	* tools/genmenu.py:
	Add a procedure for commiting access rights changes.

2009-10-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Lock when updating a_pytis_actions_structure db table.

2009-10-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix mistakes in db_pytis_menu.py.

2009-10-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Use locking pytis_update_summary_rights db function.

2009-10-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Make inner join of a_pytis_computed_summary_rights in ev_pytis_user_menu.

2009-10-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* doc/tutorials/DmpDb:
	Don't call pytis_update_summary_rights in triggers.

2009-10-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Add on-fly menu preview to the role editing form.
