@@ -342,21 +342,19 @@ class Session(wiking.PytisModule, wiking.Session):
         table = 'cms_session'
         fields = [pp.Field(_id) for _id in ('session_id', 'uid', 'session_key', 'last_access')]
 
-    def init(self, req, user):
+    def init(self, req, user, session_key):
         data = self._data
         # Delete all expired records first...
         now = mx.DateTime.now().gmtime()
         expiration = mx.DateTime.TimeDelta(hours=wiking.cfg.session_expiration)
         data.delete_many(pd.LE('last_access', pd.Value(pd.DateTime(), now - expiration)))
         # Create new data row for this session.
-        session_key = self._new_session_key()
         row, success = data.insert(data.make_row(uid=user.uid(),
                                                  session_key=session_key,
                                                  last_access=now))
         # Log session start for login history tracking.
         self._module('SessionLog').log(req, now, row['session_id'].value(),
                                        user.uid(), user.login())
-        return session_key
         
     def failure(self, req, user, login):
         self._module('SessionLog').log(req, mx.DateTime.now().gmtime(), None,
@@ -373,6 +371,8 @@ class Session(wiking.PytisModule, wiking.Session):
         return False
 
     def close(self, req, user, session_key):
+        # This deletion will lead to end_time in cms_session_log_data being set to last_access
+        # value of the deleted row.  Use delete_many() because we don't know session_id.
         self._data.delete_many(pd.AND(pd.EQ('uid', pd.Value(pd.Integer(), user.uid())),
                                       pd.EQ('session_key', pd.Value(pd.DateTime(), session_key))))
             
